fixing bioinformatics going off screen

--- a/static/style.css
+++ b/static/style.css
@@ -443,6 +443,10 @@ span.fade {
         gap: 10px;
     }
 
+    .bio-title {
+        font-size: 30px;
+    }
+
 
     /* ------------------------- about */
     .header-container {
